# dc-federated

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKERFILE  DOCS.md  Dockerfile  LICENSE  LICENSE.txt  README.md  README.rst  create_worker_env.sh  docker_compose_mnist.yml  docker_compose_plantvillage.yml  mkdocs.yml  requirements-docs.txt  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: main.yml  python-package.yml
chart/mnist_backend/: Chart.yaml  values.yaml
chart/mnist_backend/templates/: deployment.yaml  ingress.yaml  service.yaml
chart/mnist_worker/: .helmignore  Chart.yaml  values.yaml
chart/mnist_worker/templates/: deployment.yaml
docs/: Makefile  architecture.md  conf.py  dc_fed_w_doc.md  dc_federated.backend.md  enabling_ssl.md  getting_started.md  index.md  index.rst  mnist.md  multi_device_test.md  plantvillage.md  worker_authentication.md
docs/deployment/: deployment_notes.md  stress_test.md
docs/examples/: mnist.md  multi_device_test.md  new_algorithms.md  plantvillage.md  using_fed_avg.md
src/dc_federated/: __init__.py  utils.py
src/dc_federated/PlantVillage/: plant_fed_avg_server.py  plant_fed_avg_worker.py  plant_fed_model.py
src/dc_federated/backend/: __init__.py  _constants.py  _worker_manager.py  backend_utils.py  dcf_server.py  dcf_worker.py  gen_worker_key_pair.py  server_worker.py  subprocess_dcf_server.py  (+2 more)
src/dc_fl_demo/: skeleton.py  utils.py
tests/: conftest.py  test_DCFServerHandler.py  test_admin_api.py  test_authentication.py  test_backend.py  test_backend_model_integration.py  test_dc_federated_integration.py  test_fed_avg.py  test_long_poll.py  test_server_worker.py  test_skeleton.py  test_subprocess_dcf_server.py  test_worker_authentication.py  test_worker_persist.py  test_zmq_interface.py
(+52 files in other folders)
